# swissphone-to-divera

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
conf/: config.yml  keywords.yml  logging.yml
lib/: api.py  config.py  exceptions.py  parser.py  reader.py
